//info: https://gunnarpeipman.com/aspnet-core-grpc/

syntax = "proto3";

option csharp_namespace = "GrpcService1";

package Greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}


// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

service Performer{

	rpc PerformIt (PerformRequest) returns (PerformReply);
}


message PerformRequest{
	string name = 1;
}
message PerformReply{
	string name = 1;
	int32 age = 2;

}